add styles to map and address list, finish basic map operation

--- a/src/address/container/addressSection.html
+++ b/src/address/container/addressSection.html
@@ -1,2 +1,6 @@
-<address-list></address-list>
-<address-map></address-map>
+<md-card>
+  <md-content class="container" layout="row">
+    <address-map flex="65"></address-map>
+    <address-list flex="35"></address-list>
+  </md-content>
+</md-card>
