--- a/index.html
+++ b/index.html
@@ -6,11 +6,10 @@
     <meta name="viewport" content="width=device-width,initial-scale=1,maximum-scale=1.0">
   </head>
   <body>
-    <div id="page-container" class="" layout="row">
+    <div layout="row" layout-align="center center">
       <address-section></address-section>
     </div>
-    <script type="text/javascript" src="https://maps.googleapis.com/maps/api/js?key=AIzaSyC4g4csA76adEd1QHHzFPfdapTIOkJZAB4&libraries=places"></script>
-    <!--<script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyC4g4csA76adEd1QHHzFPfdapTIOkJZAB4" async defer></script>-->
+		<script type="text/javascript" src="https://maps.googleapis.com/maps/api/js?key=AIzaSyC4g4csA76adEd1QHHzFPfdapTIOkJZAB4&libraries=places"></script>
     <script src="vendor.bundle.js"></script>
     <script src="app.bundle.js"></script>
   </body>
